--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,7 @@
+<app-navbar></app-navbar>
 <div class="container">
-  <app-header></app-header>
-  <tabset class="mt-5">
-    <tab heading="Work Experience" class="mt-2">
-      <app-work-experience></app-work-experience>
-    </tab>
-    <tab heading="Publications" class="mt-2">
-      <app-publications></app-publications>
-    </tab>
-    <tab heading="Events" class="mt-2">
-      <app-events></app-events>
-    </tab>
-  </tabset>
+  <app-header id="about"></app-header>
+  <app-work-experience id="experience"></app-work-experience>
+  <app-publications id="publications"></app-publications>
+  <app-events id="events"></app-events>
 </div>
