--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<div class="py-5">
   <!-- INFOGIRL Section -->
   <section id="infogirl" class="mb-5">
     <h1 class="display-4 text-center mb-4 text-primary">
@@ -162,7 +162,7 @@
   </section>
 
   <section id="wei" class="mb-5">
-    <h1 class="display-4 text-center mb-4 ">
+    <h1 class="display-4 text-center mb-4">
       32nd Workshop on Computer Education (WEI) Paper Presentation - BRASÍLIA,
       DF - 2024
     </h1>
@@ -202,9 +202,7 @@
     </div>
   </section>
   <section id="angular" class="mb-5">
-    <h1 class="display-4 text-center mb-4 ">
-      Infogirl - Angular - 2022
-    </h1>
+    <h1 class="display-4 text-center mb-4">Infogirl - Angular - 2022</h1>
     <p class="lead text-center mb-4">
       This event is designed for high school students to explore what we
       typically study at the Federal University of Ceará, aiming to inspire more
