--- a/src/app/events/header/header.component.html
+++ b/src/app/events/header/header.component.html
@@ -46,10 +46,6 @@
   </div>
 
   <div class="col-md-6 d-flex justify-content-center">
-    <img
-      src="../../assets/pics/1727549827312-removebg-preview.png"
-      alt="Foto"
-      class="img img-fluid"
-    />
+    <img src="../../assets/pics/perfil.png" alt="Foto" class="img img-fluid" />
   </div>
 </div>
