--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,19 @@
-tabset {
-  margin-top: 30px;
+/* No seu app.component.css */
+.container {
+  height: 100vh;
+  overflow-y: auto;
+  scroll-snap-type: y mandatory;
+  /* Para Firefox */
+  scrollbar-width: none;
+
+  -ms-overflow-style: none;
+}
+
+.container > * {
+  scroll-snap-align: start;
+  height: 100vh;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
